# wasmtime-index-error-test

./: Cargo.toml  Makefile  wasi_snapshot_preview1.reactor.wasm
components/comp/: Cargo.toml
components/comp/src/: lib.rs
components/comp/wit/: world.wit
src/: main.rs
